Fixed email bug (although I think it will have more broken once I pull) and scrap interface for cpu is done

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -122,3 +122,7 @@ table th {
   white-space: nowrap;
   overflow: hidden;
 }
+
+.hidden {
+  display: none;
+}
